--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -12,6 +12,8 @@ body {
     --aside-color: rgb(255, 255, 255);
     --div-color:  rgb(255, 255, 255);
     --border-color: rgb(227, 227, 227);
-    --hover-color: rgb(230, 232, 233);
+    --hover-color: rgb(206, 239, 255);
     --footer-color:  rgb(230, 236, 237);
+    --font-color: rgb(53, 63, 94);
+    color: var(--font-color);   
 }
