--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -13,9 +13,11 @@ body {
     --aside-color: rgb(255, 255, 255);
     --div-color:  rgb(249, 249, 249);
     --border-color: rgb(210, 217, 221);
+    --blog-card-color: white;
     --hover-color: rgb(231, 241, 246);
     --footer-color:  rgb(230, 236, 237);
-    --border-shadow-color: rgba(207, 207, 207, 0.2);
+    --border-shadow-color-1: rgba(152, 152, 152, 0.2);
+    --border-shadow-color-2: rgba(207, 207, 207, 0.2);
     --font-color: rgb(53, 63, 94);
     --font-hover-color: rgb(89, 107, 158);
     color: var(--font-color);   
