--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -8,16 +8,17 @@ body {
     text-align: center;
     font-family: 'Microsoft YaHei', 'Helvetica Neue', Helvetica, 'PingFang SC', 'Hiragino Sans GB',
     '微软雅黑', Arial, sans-serif;
-    --background-color: rgb(246, 246, 246);
+    --background-color: rgb(255, 255, 255);
     /* color */
     --aside-color: rgb(255, 255, 255);
-    --div-color:  rgb(249, 249, 249);
+    --div-color:  rgb(255, 255, 255);
     --border-color: rgb(210, 217, 221);
     --blog-card-color: white;
+    --blog-card-hover-color: rgb(245, 248, 250);
     --hover-color: rgb(231, 241, 246);
     --footer-color:  rgb(230, 236, 237);
     --border-shadow-color-1: rgba(152, 152, 152, 0.2);
-    --border-shadow-color-2: rgba(207, 207, 207, 0.2);
+    --border-shadow-color-2: rgba(219, 219, 219, 0.2);
     --font-color: rgb(53, 63, 94);
     --font-hover-color: rgb(89, 107, 158);
     color: var(--font-color);   
