fix: response code

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -13,6 +13,7 @@ body {
     --aside-color: rgb(248, 248, 248);
     --div-color:  rgb(255, 255, 255);
     --border-color: rgb(210, 217, 221);
+    --page-header-color: rgb(165, 210, 236);
     --blog-card-color: white;
     --blog-card-hover-color: rgb(245, 248, 250);
     --hover-color: rgb(231, 241, 246);
